@@ -73,5 +73,4 @@
         permission="zope2.View" 
         />
 
-
 </configure>
